@@ -24,8 +24,9 @@ gcl (2.5.4-1) unstable; urgency=low
     names
   * Small patch for fix xgcl demo (thanks  Michael Koehne)
   * Better bfd symbol table strategy
+  * Fix bfd table symbol counting for combined_table profiling
 
- -- Camm Maguire <camm@enhanced.com>  Fri,  8 Aug 2003 20:02:54 +0000
+ -- Camm Maguire <camm@enhanced.com>  Tue, 12 Aug 2003 01:33:22 +0000
 
 gcl (2.5.3-2) unstable; urgency=low
 
